Fixed issue with not removing invisible markers from map. Updated mapping code to keep selected games on the map with full opacity...potential games are faded a little bit.

--- a/src/gae/static/css/styles.css
+++ b/src/gae/static/css/styles.css
@@ -25,6 +25,16 @@
     border-radius: 15px;
 }
 
+#prevDayArrow
+{
+    cursor: pointer;
+}
+
+#nextDayArrow
+{
+    cursor: pointer;
+}
+
 #itinerary
 {
     background-color: white;
